feat: 完整anigi流程跟cpu/fakecpu/mem 三個sourceProvider

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}",
-            "cwd": "${workspaceFolder}/bin/Debug",
+            "cwd": "${workspaceFolder}",
             "env": {},
             "args": [
                 "-d",
